rename the main file add in devise views add in views, helpers, controllers

--- a/views/layout/application.html.haml
+++ b/views/layout/application.html.haml
@@ -14,7 +14,7 @@
   %body
     #loading
       = image_tag('layout/loading.gif', :alt => "Loading...")
-    #doc4
+    #doc
       #hd
         = render(:partial => "shared/header.html.haml")
       #bd
