text aligns center by default... why?

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -2,6 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
 
 body, html {
+  text-align: left;
   background-color: #5282a6;
 }
 
