--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -5,12 +5,12 @@
     = f.hidden_field :reset_password_token
 
     %p
-      = f.label :password
+      = f.label(:password, "New password")
     %p
       = f.password_field :password
 
     %p
-      = f.label :password_confirmation
+      = f.label(:password_confirmation, "Confirm new password")
     %p
       = f.password_field :password_confirmation
 
