--- a/public/stylesheets/sass/_pagination.scss
+++ b/public/stylesheets/sass/_pagination.scss
@@ -1,50 +1,48 @@
-/* Pagination */
-
 .pagination {
   margin-top: 10px;
-  background: white;
+  background: $pagination_bg;
   position: relative;
   left: 25%;
   width: 50%;
   /* self-clearing method: */
   a, span, em {
-    padding: .2em .5em;
+    padding: 3px 6px;
     display: block;
     float: left;
     margin-right: 1px; }
   span {
     &.disabled {
-      color: #999;
-      border: 1px solid #DDD; }
+      color: $pagination_disabled_fg;
+      border: 1px solid lighten($pagination_disabled_fg, 20%); }
     &.current {
       font-weight: bold;
-      background: #007a74;
-      color: white;
-      border: 1px solid #007a74; } }
+      background: $pagination_current_bg;
+      color: $pagination_current_fg;
+      border: 1px solid $pagination_current_bg; } }
   em {
     font-weight: bold;
-    background: #007a74;
-    color: white;
-    border: 1px solid #007a74; }
+    background: $pagination_current_bg;
+    color: $pagination_current_fg;
+    border: 1px solid $pagination_current_bg; }
   a {
     text-decoration: none;
-    color: #007a74;
-    border: 1px solid #007a74;
+    color: $pagination_current_bg;
+    border: 1px solid $pagination_current_bg;
     &:hover, &:focus {
-      background-color: #001f7f;
-      color: #003;
-      border-color: #003; } }
+      background-color: $pagination_current_bg;
+      color: $pagination_current_fg;
+      border-color: $pagination_current_bg; } }
   .page_info {
-    background: #007a74;
-    color: #fff;
-    padding: .4em .6em;
+    background: $pagination_current_bg;
+    color: $pagination_current_fg;
+    padding: 4px 6px;
     width: 30em;
-    margin-bottom: .3em;
+    margin-bottom: 3px;
     text-align: center;
     b {
-      color: #007a74;
-      background: #fff;
-      padding: .1em .25em; } }
+      color: $pagination_current_bg;
+      background: $pagination_current_fg;
+      padding: 2px 3px; } }
   &:after {
     content: ".";
     display: block;
