--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -1,42 +1,10 @@
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans);
+@import "fonts";
+@import "variables";
 
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
+@import "flash_messages";
+@import "pagination";
 
-body, html {
-  text-align: left;
-  background-color: #5282a6; }
-
-a {
-  color: #fff; }
-
-th {
-  text-align: left; }
-
-img {
-  border: none; }
-
-#doc {
-  padding-top: 10px;
-  margin: auto;
-  /* center in viewport */
-  width: 750px;
-  /* fix page width */ }
-
-.rounded-left {
-  -moz-border-radius-topleft: 5px;
-  -webkit-border-top-left-radius: 5px;
-  -moz-border-radius-bottomleft: 5px;
-  -webkit-border-bottom-left-radius: 5px; }
-
-.rounded-right {
-  -moz-border-radius-topright: 5px;
-  -webkit-border-top-right-radius: 5px;
-  -moz-border-radius-bottomright: 5px;
-  -webkit-border-bottom-right-radius: 5px; }
-
-.rounded {
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px; }
+@import "layout";
 
 .border-black {
   border: 1px solid #000; }
@@ -46,68 +14,6 @@ img {
 
 .border-grey {
   border: 1px solid #444; }
-
-#loading {
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  z-index: 100;
-  display: none; }
-
-.page-title {
-  font-family: 'Droid Sans Mono', arial, serif;
-  font-size: 28px;
-  font-weight: bold;
-  color: #000; }
-
-.section-title {
-  font-family: 'Droid Sans', arial, serif;
-  font-size: 24px;
-  color: #000; }
-
-#hd {
-  position: relative; }
-
-#header {
-  height: 90px;
-  margin: 0px;
-  padding: 5px 5px 5px 10px;
-  position: relative;
-  background-color: #fff; }
-
-#user {
-  position: absolute;
-  z-index: 5;
-  top: 5px;
-  right: 10px; }
-
-#help {
-  position: absolute;
-  z-index: 5;
-  top: 5px;
-  right: 10px;
-  top: 45px; }
-
-#main {
-  position: relative;
-  min-height: 500px;
-  margin-top: 0.5em;
-  padding: 1em;
-  background-color: #fff; }
-
-#navigation {
-  margin-top: 0.5em;
-  padding: 1em;
-  color: #fff;
-  background-color: #222526;
-  position: relative;
-  a {
-    color: #fff; } }
-
-#footer {
-  padding: 1em;
-  text-align: center;
-  color: #fff; }
 
 .white {
   color: #fff; }
@@ -158,8 +64,6 @@ img {
   color: #fff;
   background-color: #000; }
 
-@import "flash_messages";
-
 .help {
   color: #000;
   background-color: #EEF3DC;
@@ -191,8 +95,6 @@ img {
   /* Safari, Opera */
   -moz-opacity: 0.20;
   /* FireFox */ }
-
-@import "pagination";
 
 #user-nav {
   float: right; }
