--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -4,100 +4,8 @@
 @import "flash_messages";
 @import "pagination";
 
+@import "template";
+@import "colors";
 @import "layout";
 
-.border-black {
-  border: 1px solid #000; }
-
-.border-white {
-  border: 1px solid #fff; }
-
-.border-grey {
-  border: 1px solid #444; }
-
-.white {
-  color: #fff; }
-
-.darkblue {
-  color: #001f7f; }
-
-.blue {
-  color: #065590; }
-
-.lightblue {
-  color: #5282a6; }
-
-.yellow {
-  color: #ee4; }
-
-.red {
-  color: #b22; }
-
-.green {
-  color: #2b2; }
-
-.darkgreen-bg {
-  background: #202E2E; }
-
-.middlegreen-bg {
-  background: #266646; }
-
-.lightgreen-bg {
-  background: #64A354; }
-
-.aqua-bg {
-  background: #6DE0C2; }
-
-.butter-bg {
-  background: #FFFBC5; }
-
-.complete {
-  background-color: #99ff99; }
-
-.working {
-  background-color: #ffff99; }
-
-.created {
-  background-color: #ff9999; }
-
-.row-header {
-  color: #fff;
-  background-color: #000; }
-
-.help {
-  color: #000;
-  background-color: #EEF3DC;
-  border: thin solid #666666;
-  padding: 10px; }
-
-.rowHeader {
-  background-color: #D3D3D3;
-  font-weight: bold; }
-
-.rowBlue {
-  background-color: #C5D6FA; }
-
-.rowWhite {
-  background-color: #FFFFFF; }
-
-.rowGrey {
-  background-color: #D3D3D3; }
-
-.lightred {
-  background-color: #ffffbb;
-  padding-right: 5px;
-  padding-left: 5px; }
-
-.faded {
-  filter: alpha(opacity = 20);
-  /* IE */
-  opacity: 0.2;
-  /* Safari, Opera */
-  -moz-opacity: 0.20;
-  /* FireFox */ }
-
-#user-nav {
-  float: right; }
-
-.clear {
-  clear: both; }
+@import "forms";
