--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -1,13 +1,7 @@
 = page_title("Resend confirmation instructions")
 = devise_error_messages!
 .form-box
-  = form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f|
-    %p
-      = f.label(:email)
-    %p
-      = f.email_field(:email)
-
-    %p
-      = f.submit("Resend confirmation instructions")
-
+  = simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f|
+    = f.input(:email, :as => :email)
+    = f.button(:submit, "Resend confirmation instructions")
   = render(:partial => "devise/shared/links")
