--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,20 +1,9 @@
 = page_title("Change your password")
 = devise_error_messages!
 .form-box
-  = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f|
-    = f.hidden_field :reset_password_token
-
-    %p
-      = f.label(:password, "New password")
-    %p
-      = f.password_field :password
-
-    %p
-      = f.label(:password_confirmation, "Confirm new password")
-    %p
-      = f.password_field :password_confirmation
-
-    %p
-      = f.submit "Change my password"
-
+  = simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f|
+    = f.input(:reset_password_token, :as => :hidden)
+    = f.input(:password, :as => :password, :label => "New password")
+    = f.input(:password_confirmation, :as => :password, :label => "Confirm new password")
+    = f.button(:submit, "Change my password")
   = render(:partial => "devise/shared/links")
