--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,12 +1,7 @@
 = page_title("Forgot your password?")
 = devise_error_messages!
 .form-box
-  = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
-    %p
-      = f.label(:email)
-    %p
-      = f.email_field(:email)
-
-    %p
-      = f.submit("Send me reset password instructions")
+  = simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
+    = f.input(:email, :as => :email)
+    = f.button(:submit, "Send me reset password instructions")
   = render(:partial => "devise/shared/links")
