--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,27 +1,12 @@
 = page_title("Edit #{resource_name.to_s.humanize}")
 = devise_error_messages!
 .form-box
-  = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-    %p
-      Email
-    %p
+  = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+    = f.label("Email")
+    .input
       = resource.email
-    %p
-      = f.label(:current_password)
-      %i
-        (we need your current password to confirm your changes)
-    %p
-      = f.password_field(:current_password)
-    %p
-      = f.label(:password)
-      %i
-        (leave blank if you don't want to change it)
-    %p
-      = f.password_field(:password)
-    %p
-      = f.label(:password_confirmation)
-    %p
-      = f.password_field(:password_confirmation)
-    %p
-      = f.submit("Update")
-      = link_to('cancel', user_url(current_user))
+    = f.input(:current_password, :as => :password, :label => "Current password", :hint => "we need your current password to confirm your changes")
+    = f.input(:password, :as => :password, :hint => "leave blank if you don't want to change it", :required => false)
+    = f.input(:password_confirmation, :as => :password, :label => "Confirm new password")
+    = f.button(:submit, "Update")
+    = link_to('cancel', user_url(current_user))
