--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,22 +1,9 @@
 = page_title("Sign up")
 = devise_error_messages!
 .form-box
-  = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-    %p
-      = f.label(:email)
-    %p
-      = f.email_field(:email)
-
-    %p
-      = f.label(:password)
-    %p
-      = f.password_field(:password)
-
-    %p
-      = f.label(:password_confirmation)
-    %p
-      = f.password_field(:password_confirmation)
-    %p
-      = f.submit("Sign up")
-
+  = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+    = f.input(:email, :as => :email)
+    = f.input(:password, :as => :password)
+    = f.input(:password_confirmation, :as => :password, :label => "Confirm password")
+    = f.button(:submit, "Sign up")
   = render(:partial => "devise/shared/links")
