--- a/public/stylesheets/sass/_variables.scss
+++ b/public/stylesheets/sass/_variables.scss
@@ -7,12 +7,20 @@ $main_bg: #fff;
 
 $footer_text: #fff;
 
+$help_bg: #eef3dc;
+$help_txt: #000;
+
 $success: #e5f2cf;
 $notice: #e8eaff;
-$error: #FFEAE8;
+$error: #ffeae8;
 
 $pagination_bg: #fff;
 $pagination_disabled_fg: #999;
 $pagination_current_bg: #007a74;
 $pagination_current_fg: #fff;
 
+$row_header_bg: #000;
+$row_header_txt: #fff;
+$row_odd_bg: #c5d6fa;
+$row_even_bg: #ffffff;
+$row_alt_bg: #d3d3d3;
