--- a/app/views/devise/unlocks/new.html.haml
+++ b/app/views/devise/unlocks/new.html.haml
@@ -1,7 +1,7 @@
 = page_title("Resend unlock instructions")
 = devise_error_messages!
 .form-box
-  = form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f|
+  = simple_form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f|
     = f.input(:email, :as => :email)
     = f.button(:submit, "Resend unlock instructions")
   = render(:partial => "devise/shared/links")
