--- a/public/stylesheets/sass/_layout.scss
+++ b/public/stylesheets/sass/_layout.scss
@@ -28,3 +28,12 @@
 
 .clear {
   clear: both; }
+
+.auth_provider {
+  img {
+    display: block; }
+  float: left;
+  text-decoration: none;
+  margin-right: 20px;
+  text-align: center;
+  margin-bottom: 10px; }
