--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -4,8 +4,9 @@
 @import "flash_messages";
 @import "pagination";
 
+@import "forms";
+
 @import "template";
 @import "colors";
 @import "layout";
-
-@import "forms";
+@import "grid";
