--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,2 +1,5 @@
-#header.rounded
-  = link_to(image_tag('layout/logo.png', :class => "APP_NAME-logo", :alt => "APP_NAME"), root_url)
+.grid-container.header
+  .grid_24
+    = link_to(image_tag('layout/logo.png', :class => "APP_NAME-logo", :alt => "APP_NAME"), root_url)
+    = render(:partial => "shared/user.html.haml")
+.clear
