updates to css, devise

--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -2,9 +2,9 @@
 @import "variables";
 
 @import "flash_messages";
-@import "pagination";
 
 @import "forms";
+@import "formalize";
 
 @import "template";
 @import "colors";
