--- a/app/views/shared/_pagination_links.html.haml
+++ b/app/views/shared/_pagination_links.html.haml
@@ -1,4 +1,4 @@
 .pagination
   .page_info
     = page_entries_info(items)
-  = will_paginate(items, :class => (defined? klass) ? klass : "data_pagination")
+  = paginate(items, :class => (defined? klass) ? klass : "data_pagination")
