--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -1,6 +1,8 @@
 body, html {
   height: 100%;
   text-align: left;
+  margin: 0px;
+  font-family: $droid;
   background-color: $page_background;
   color: $txt; }
 
