--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,5 +1,5 @@
-.grid-container.header
-  .grid_24
+.header
+  #flash-messages
+    = raw(flash_messages)
     = link_to(image_tag('layout/logo.png', :class => "APP_NAME-logo", :alt => "APP_NAME"), root_url)
     = render(:partial => "shared/user.html.haml")
-.clear
