--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -73,10 +73,9 @@ img {
   a {
     color: $footer_link; }}
 
-.gminer-logo {}
+.logo {
 
-.mcw-logo, .ncbo-logo {
-  margin-left: 50px; }
+}
 
 #user {
   position: absolute;
