--- a/app/assets/stylesheets/partials/_variables.css.scss
+++ b/app/assets/stylesheets/partials/_variables.css.scss
@@ -30,3 +30,8 @@ $remove_txt: #b22;
 $success: #e5f2cf;
 $notice: #e8eaff;
 $error: #ffeae8;
+
+$pagination_bg: #fff;
+$pagination_disabled_fg: #999;
+$pagination_current_bg: #007a74;
+$pagination_current_fg: #fff;
