--- a/app/assets/stylesheets/partials/_flash_messages.css.scss
+++ b/app/assets/stylesheets/partials/_flash_messages.css.scss
@@ -19,17 +19,17 @@
 .success {
   color: darken($success, 60%);
   background-color: $success;
-  background-image: url('/images/icons/success.png'); }
+  background-image: asset_url("icons/success.png", image); }
 
 .notice {
   color: darken($notice, 60%);
   background-color: $notice;
-  background-image: url('/images/icons/notice.png'); }
+  background-image: asset_url("icons/notice.png", image); }
 
 .warning, .alert, .validation {
   color: darken($error, 50%);
   background-color: $error;
-  background-image: url('/images/icons/error.png'); }
+  background-image: asset_url("icons/error.png", image); }
 
 #error_explanation {
   background-color: $error;
