add in the new files

--- a/app/views/layout/application.html.haml
+++ b/app/views/layout/application.html.haml
@@ -1,28 +1,24 @@
 !!!
 %html.no-js{:xmlns => "http://www.w3.org/1999/xhtml", "xml:lang" => "en", :lang => "en"}
   %head
-    = csrf_meta_tag
-    %meta{ :content => "text/html; charset=iso-8859-1", "http-equiv" => "Content-Type" }
+    %meta{ :content => "text/html; charset=utf-8", "http-equiv" => "Content-Type" }
+    %meta{ name: "viewport", content: "width=device-width, initial-scale=1.0" }
     %title
-      = h(yield(:title) || "APP_NAME")
-    = yield(:head)
-    = render(:partial => "shared/tracking.html.haml") if Rails.env.production?
-    %script{:src => "http://www.google.com/jsapi"}
+      = content_for?(:title) ? yield(:title) : "APP_NAME"
+    %script{src: "http://www.google.com/jsapi"}
     = stylesheet_link_tag("application")
     = javascript_include_tag("application")
-
+    = render("shared/tracking") if Rails.env.production?
+    = yield(:head)
+    = csrf_meta_tags
   %body
-    #header
-      = render(:partial => "shared/header.html.haml")
-    #nav
-      = render(:partial => "shared/navigation.html.haml")
-    #content
-      .main
-        #loading
-          = image_tag('layout/loading.gif', :alt => "Loading...")
-        = yield
-      .clear
-    #footer
-      = render(:partial => "shared/footer.html.haml")
-    %iframe{ :src => "about:blank", :style => "height:0px;width:0px;visibility:hidden" }
-      this frame prevents back forward cache
+    #loading
+      = image_tag('layout/loading.gif', :alt => "Loading...")
+    = render("shared/header")
+    .container.main
+      .row
+        .twelve.columns
+          #flash-messages
+            = raw(flash_messages)
+          = yield
+    = render("shared/footer")
