--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,15 +1,17 @@
 /*
- * This is a manifest file that'll automatically include all the stylesheets available in this directory
- * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
- * the top of the compiled file, but it's generally better to create a new file per style scope.
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+ * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the top of the
+ * compiled file, but it's generally better to create a new file per style scope.
+ *
  *= require_self
+ *= require foundation
+ *= require_tree .
 */
-@import "partials/variables.css.scss";
+
+@import "partials/main.css.scss";
 @import "partials/fonts.css.scss";
-@import "partials/flash_messages.css.scss";
-@import "partials/forms.css.scss";
-@import "partials/formalize.css.scss";
-@import "partials/pagination.css.scss";
-@import "partials/grid.css.scss";
-@import "partials/template.css.scss";
-@import "partials/layout.css.scss";
