--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,4 +1,5 @@
-.header
-  #flash-messages
-    = raw(flash_messages)
-  = link_to(image_tag('layout/logo.png', :class => "logo", :alt => "APP_NAME"), root_url)
+.row.header
+  .four.columns
+    = link_to(image_tag('layout/logo.png', class: "logo", alt: "APP_NAME"), root_url)
+  .eight.columns.user-navigation
+    = login_logout
