--- a/app/views/shared/_pagination.html.haml
+++ b/app/views/shared/_pagination.html.haml
@@ -1,7 +1,7 @@
 - if items.total_pages == 1
   .pagination
 - elsif (defined?(limit) || (items.total_pages < 10 && items.total_pages > 1))
-  = render(:partial => "shared/pagination_links.html.haml", :locals => {:items => items, :klass => (defined? klass) ? klass : "data_pagination"})
+  = render(:partial => "shared/pagination_links", :locals => {:items => items, :klass => (defined? klass) ? klass : "data_pagination"})
 - else
   .pagination
     .page_info
