--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,5 +1,3 @@
 .row.header
-  .four.columns
+  .span12
     = link_to(image_tag('layout/logo.png', class: "logo", alt: "APP_NAME"), root_url)
-  .eight.columns.user-navigation
-    = login_logout
