--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,3 +1,4 @@
-.row.footer
-  .span12
-    &copy; APP_NAME
+.navbar.navbar-fixed-bottom
+  .navbar-inner
+    %p.navbar-text.pull-right
+      &copy; #{Date.current.year} APP_NAME
