--- a/app/assets/stylesheets/partials/_main.scss
+++ b/app/assets/stylesheets/partials/_main.scss
@@ -1,25 +1,37 @@
-body, html {
-  height: 100%;
+body {
+  margin-top: 40px;
 }
 
 .main {
-  padding-top: 20px;
+  margin-top: 15px;
+}
+
+.navbar .brand {
+  margin-left: 0px;
+}
+
+.navbar-fixed-bottom p {
+  padding-right: 10px;
 }
 
 #loading {
   position: absolute;
-  top: 20px;
+  top: 40px;
   right: 30px;
   z-index: 100;
   display: none;
 }
 
-.header {
-  margin-top: 10px;
+h3 {
+  margin-bottom: 10px;
 }
 
-.footer {
-  text-align: right;
+.user-information {
+  margin: 10px;
+}
+
+.new-item {
+  margin: 10px;
 }
 
 /* Rails scaffold style compatibility */
