--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -1,4 +1,7 @@
 .navbar.navbar-fixed-top
   .navbar-inner
     = link_to("APP_NAME", root_path, class: "brand")
+    %ul.nav
+      %li
+        = link_to("Help", help_path)
     = render("shared/sign_in_sign_out")
