--- a/app/views/shared/_tracking.html.haml
+++ b/app/views/shared/_tracking.html.haml
@@ -1,6 +1,6 @@
 :javascript
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-1-1']);
+  _gaq.push(['_setAccount', '#{ENV['GOOGLE_ANALYTICS_ID']}']);
   _gaq.push(['_trackPageview']);
 
   (function() {
