--- a/app/views/shared/_sign_in_sign_out.html.haml
+++ b/app/views/shared/_sign_in_sign_out.html.haml
@@ -1,9 +1,9 @@
 %ul.nav.pull-right
   - if user_signed_in?
     %li
-      = link_to("Dashboard", dashboard_path)
+      = link_to("Dashboard", dashboard_url)
     %li
-      = link_to("Sign out", sign_out_path, data: { confirm: "Are you sure?" })
+      = link_to("Sign out", sign_out_url, data: { confirm: "Are you sure?" })
   - else
     %li
-      = link_to("Sign in", sign_in_path)
+      = link_to("Sign in", sign_in_url)
